--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "05fefc9fd48771932355eb2d9654e571"
 name = "tay-test1"
 handle = "tay-test1"
-application_url = "https://films-innovation-troops-fantastic.trycloudflare.com"
+application_url = "https://trinity-hardwood-rice-are.trycloudflare.com"
 embedded = true
 
 [build]
@@ -23,13 +23,13 @@ api_version = "2024-10"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_content,read_products,read_publications,read_pages"
+scopes = "read_content,read_products,read_publications,read_content"
 
 [auth]
 redirect_urls = [
-  "https://films-innovation-troops-fantastic.trycloudflare.com/auth/callback",
-  "https://films-innovation-troops-fantastic.trycloudflare.com/auth/shopify/callback",
-  "https://films-innovation-troops-fantastic.trycloudflare.com/api/auth/callback"
+  "https://trinity-hardwood-rice-are.trycloudflare.com/auth/callback",
+  "https://trinity-hardwood-rice-are.trycloudflare.com/auth/shopify/callback",
+  "https://trinity-hardwood-rice-are.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
